--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>School ERP Bihar - बिहार के स्कूलों के लिए आधुनिक निःशुल्क ERP</title>
-    <meta name="description" content="बिहार के स्कूलों को डिजिटल बनाएं हमारे एडवांस्ड, निःशुल्क स्कूल मैनेजमेंट ERP सॉफ्टवेयर से। पाएं AI सपोर्ट, स्किल कॉम्पिटिशन, कम्युनिटी और कस्टम डेवलपमेंट।">
-    <meta name="keywords" content="Free School ERP Bihar, School Management System Bihar, Digital School Bihar, School Software Free, Bihar Education, School Community Bihar, AI School Support, Custom School App, Online Fees Payment, Student Management">
+    <title>School1129</title>
+    <meta name="description" content="school1129, बिहार के स्कूलों को डिजिटल बनाएं हमारे एडवांस्ड, निःशुल्क स्कूल मैनेजमेंट ERP सॉफ्टवेयर से। पाएं AI सपोर्ट, स्किल कॉम्पिटिशन, कम्युनिटी और कस्टम डेवलपमेंट।">
+    <meta name="keywords" content="school, Free School ERP Bihar, School Management System Bihar, Digital School Bihar, School Software Free, Bihar Education, School Community Bihar, AI School Support, Custom School App, Online Fees Payment, Student Management">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
