--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
     <header id="main-header">
         <div class="container">
             <a href="#hero" class="logo">
-                <i class="fas fa-graduation-cap"></i> School ERP Bihar
+                <i class="fas fa-graduation-cap"></i> School1129 ERP Bihar
             </a>
             <nav id="main-nav">
                 <button id="mobile-menu-toggle" aria-label="Menu">
