--- a/admin.html
+++ b/admin.html
@@ -379,8 +379,21 @@
                                 <h2 class="h4 mb-4"><i class="fas fa-school me-2"></i>Manage Classes & Subjects</h2>
                                 <div class="alert alert-info d-flex align-items-center" role="alert">
                                     <i class="fas fa-info-circle me-3 fs-4"></i>
-                                    <div> Use the external <a href="add_class.html" target="_blank" class="alert-link fw-bold">Management Tool</a> to add/edit classes, subjects, and assignments for detailed control. This section provides a read-only overview. </div>
-                                </div>
+                                   <div class="dashboard-content p-4 bg-light rounded shadow">
+    <h2 class="h4 mb-4 text-center">
+        <i class="fas fa-chalkboard-teacher me-2 text-success"></i>Class Management
+    </h2>
+    <p class="mb-3 text-muted text-center">
+        Manage classes, subjects, and assignments seamlessly. For detailed control, use the advanced tools.
+    </p>
+    <div class="d-flex justify-content-center align-items-center gap-3 mt-3">
+        <!-- External Management Tool Button -->
+        <a href="add_class.html" target="_blank" class="btn btn-primary d-flex align-items-center gap-2">
+            <i class="fas fa-cogs"></i> Advanced Management Tool
+        </a>
+    
+    </div>
+</div> </div>
                                  <div class="row g-4">
                                      <div class="col-md-6"> <div class="card"> <div class="card-header"><i class="fas fa-chalkboard me-2"></i>Classes</div> <div class="card-body"> <ul id="principalClassList" class="list-group list-group-flush"><li class="list-group-item text-center p-4"><div class="spinner-border spinner-border-sm" role="status"></div></li></ul> </div> </div> </div>
                                      <div class="col-md-6"> <div class="card"> <div class="card-header"><i class="fas fa-book me-2"></i>Subjects</div> <div class="card-body"> <ul id="principalSubjectList" class="list-group list-group-flush"><li class="list-group-item text-center p-4"><div class="spinner-border spinner-border-sm" role="status"></div></li></ul> </div> </div> </div>
