--- a/admin.html
+++ b/admin.html
@@ -185,6 +185,7 @@
         </div>
          <p class="mt-2">Processing...</p>
     </div>
+    
 
     <!-- Alert Area -->
     <div id="alertArea"></div>
@@ -195,7 +196,7 @@
             <div class="col-md-9 col-lg-7 col-xl-6">
                 <div class="card animate__animated animate__zoomIn">
                     <div class="card-header text-center text-white fs-4">
-                       <i class="fas fa-school-flag me-2"></i> Synergy School Suite
+                       <i class="fas fa-school-flag me-2"></i> School1129 ERP Software 
                     </div>
                     <div class="card-body p-4 p-md-5">
                         <ul class="nav nav-pills mb-4 nav-fill" id="pills-tab" role="tablist">
